# karamay_engine

./: LICENSE  README.md
_KaramayEngine/karamay_engine_graphics_unit_cmake/: .gitignore  CMakeLists.txt
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/dependencies/nlohmann/: json.hpp
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/dependencies/stb/: stb_ds.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/rpcs/: shader_toy_0.rpc
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/scripts/: Main.lua  Test.lua
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/scripts/blue_freckle/: Test.lua
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/scripts/make/: att.lua
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/shaders/: FragmentShader.frag  test.frag  test.vert
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/: karamay-engine-graphics.cpp
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/Core/: CoreLibrary.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/Kanas/: Kanas.h  custom_render_pass_dispatcher.cpp  custom_render_pass_dispatcher.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/dispatcher/: gl_renderer_dispatcher.cpp  gl_renderer_dispatcher.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/engine/: karamay_engine.cpp  karamay_engine.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/graphics/: GPU_dispatcher.h  gl_renderer_dispatcher.cpp  gl_renderer_dispatcher.h  gl_renderer_framework.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/kanas/: dispatcher.cpp
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/karamay_RHI/: karamay_RHI.h
_KaramayEngine/karamay_engine_graphics_unit_cmake/karamay_engine_graphics_unit/source/lua/: lua_manager.h  lvm.cpp  (+9 more)
(+1195 files in other folders)
